--- a/companies.css
+++ b/companies.css
@@ -83,6 +83,7 @@ h1, h2 {
   text-align: center;
   padding: 10px;
   border-bottom: 2px solid #0047ab;
+  background:linear-gradient(135deg, #fef6e4, #ffffff);
 }
 
 .header-container {
